@@ -490,7 +490,7 @@ const gremlins = {
     g_withStrategiesXRepeatUnrollStrategyX_V_repeatXoutX_timesX2X: [function({g}) { return g.withStrategies(new RepeatUnrollStrategy()).V().repeat(__.out()).times(2) }], 
     g_withoutStrategiesXRepeatUnrollStrategyX_V_repeatXoutX_timesX2X: [function({g}) { return g.withoutStrategies(RepeatUnrollStrategy).V().repeat(__.out()).times(2) }], 
     g_withStrategiesXReservedKeysVerificationStrategyXthrowException_trueXX_addVXpersonX_propertyXid_123X_propertyXname_markoX: [function({g}) { return g.withStrategies(new ReservedKeysVerificationStrategy({throwException: true})).addV("person").property("id", 123).property("name", "marko") }], 
-    g_withStrategiesXReservedKeysVerificationStrategyXthrowException_trueXX_addVXpersonX_propertyXage_29X_propertyXname_markoX: [function({g}) { return g.withStrategies(new ReservedKeysVerificationStrategy({throwException: true, keys: ["age"]})).addV("person").property("age", 29).property("name", "marko") }], 
+    g_withStrategiesXReservedKeysVerificationStrategyXthrowException_trueXX_addVXpersonX_propertyXage_29X_propertyXname_markoX: [function({g}) { return g.withStrategies(new ReservedKeysVerificationStrategy({throwException: true, keys: new Set(["age"])})).addV("person").property("age", 29).property("name", "marko") }], 
     g_withoutStrategiesXReservedKeysVerificationStrategyX_addVXpersonX_propertyXid_123X_propertyXname_markoX: [function({g}) { return g.withoutStrategies(ReservedKeysVerificationStrategy).addV("person").property("id", 123).property("name", "marko") }], 
     g_withStrategiesXSeedStrategyX_V: [function({g}) { return g.withStrategies(new SeedStrategy({seed: 7})).V().coin(0.5) }], 
     g_withoutStrategiesXSeedStrategyX_V: [function({g}) { return g.withoutStrategies(SeedStrategy).V() }], 
