@@ -219,14 +219,14 @@ class TestDriverRemoteConnection(object):
         assert shuffledResult == g.V().values("name").order().by(Order.shuffle).toList()
         assert shuffledResult == g.V().values("name").order().by(Order.shuffle).toList()
         assert shuffledResult == g.V().values("name").order().by(Order.shuffle).toList()
-        #
-        g = traversal().with_(remote_connection). \
-            withStrategies(ReservedKeysVerificationStrategy(throw_exception=True))
-        try:
-            g.addV("person").property("id", "please-don't-use-id").iterate()
-            assert False
-        except GremlinServerError as gse:
-            assert gse.status_code == 500
+        # TINKERPOP-3055
+        # g = traversal().with_(remote_connection). \
+        #     withStrategies(ReservedKeysVerificationStrategy(throw_exception=True))
+        # try:
+        #     g.addV("person").property("id", "please-don't-use-id").iterate()
+        #     assert False
+        # except GremlinServerError as gse:
+        #     assert gse.status_code == 500
         #
         g = traversal().with_(remote_connection).with_("x", True).with_('evaluationTimeout', 10)
         try:
