@@ -43,6 +43,7 @@ This release also includes changes from <<release-3-7-XXX, 3.7.XXX>>.
 * Updated `OptionsStrategy` in `gremlin-python` to take options directly as keyword arguments.
 * Added static `instance()` method to `ElementIdStrategy` to an instance with the default configuration.
 * Updated `ElementIdStrategy.getConfiguration()` to help with serialization.
+* Changed type for `ReservedKeysVerificationStrategy.keys` in .NET to take a `Set<string>` rather than `List<string>`.
 
 == TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)
 
